# quad_xenomai

./: CMakeLists.txt  actuator.cpp  actuator.h  controller.cpp  controller.h  controlwindow.cpp  controlwindow.h  controlwindow.ui  data_logging.h  data_mutex.cpp  data_mutex.h  ecat_func.h  filter.cpp  filter.h  kinematics.cpp  kinematics.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optimization.cpp  optimization.h  trajectory.cpp  trajectory.h
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: codemodel-v2-eb26c20e763134dbc1b5.json  index-2024-07-18T00-59-40-0624.json  target-test_1-Debug-2d29f58c2669a60ec110.json
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-baf7071af755a2773f8f.json  cmakeFiles-v1-660f7a89e98895e2a7cc.json  codemodel-v2-9def22fc6f232266ec65.json  index-2024-07-18T00-59-26-0941.json  target-test_1-Debug-28cf614cf8466b60af7a.json  target-test_1_autogen-Debug-05b4272c5c9ad80f9288.json  target-test_1_autogen_timestamp_deps-Debug-1682234f5cf695eb1bc1.json
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QCheckBox.A2FB4C88529C7880.idx  QComboBox.301C0B53E4C6CB8A.idx  QGroupBox.C706213DDFCCE5F9.idx  QLabel.BDEFA4A71E6281FE.idx  QLineEdit.D2493C4FE037097D.idx  QMenuBar.7683FAF41346BE00.idx  QPushButton.860E7B5B7529FF10.idx  QStatusBar.D80942EE0EAF260F.idx  QTabWidget.1B789DF8F0CB07AC.idx  QThread.0CE7EAC25447818B.idx  QWidget.5D111D63A76DE8DB.idx  compiler.h.798222F827333F94.idx  controlwindow.cpp.68559DC40541C59A.idx  controlwindow.h.55C79BE92833BC1E.idx  data_mutex.cpp.3B9769763BD541C5.idx  data_mutex.h.A68823DCD3736D73.idx  libc.h.284C2FD00661FD34.idx  limits.h.D3D70A7F5AC2C5F1.idx  main.cpp.8FE11424CEE9ABF5.idx  mainwindow.cpp.8173B570D993FBFA.idx  mainwindow.h.AFCA568CB06DD762.idx  pthread.h.B6B244B2CB407E7A.idx  qaccessible.h.C888614F97ECC72D.idx  qapplication.h.0978E64444F4B0A6.idx  qarraydata.h.782A8FACBA990230.idx  qarraydataops.h.3B8E11B00ED9A414.idx  qarraydatapointer.h.7D6437417244A8B6.idx  qatomic.h.74825A8720AA9A07.idx  qbitarray.h.62D360F21A1BE363.idx  qbytearray.h.66DD1FBB2E867B26.idx  qbytearraylist.h.AD4CF05CBC6CB1B3.idx  qcborarray.h.CE3BBB32E54420B1.idx  qcbormap.h.B729A6BBEA64E44D.idx  qcborstreamreader.h.F5964531DFF8F786.idx  qcolor.h.3F97DA324D9D092A.idx  qcommandlineparser.h.2CD2B830A1BEDF61.idx  qcompilerdetection.h.04EEFD21BC9DDBA1.idx  qcontainerfwd.h.7A34C28A89B42D05.idx  qcontiguouscache.h.FDC448EA832030E0.idx  qcoreapplication.h.E15019EF2D922ED8.idx  (+88 more)
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/test_1_autogen/: deps
build-test_1-Desktop_Qt_5_15_2_GCC_64bit-Debug/test_1_autogen/EWIEGA46WW/: moc_controlwindow.cpp.d  moc_mainwindow.cpp.d  moc_qcustomplot.cpp.d
initial_encoder/: Motor 0.txt  Motor 1.txt  Motor 10.txt  Motor 2.txt  Motor 4.txt  Motor 5.txt  Motor 6.txt  Motor 7.txt  Motor 8.txt  Motor 9.txt
